20060329
- Updated TOC for 1.10
- Fixed bug with gametooltip changes in 1.10
- Integrated changes from the modified version of EngInventory posted on auctioneer's site
- Fixed error with hunter training window
20190323 - Baroque edit
- Updated TOC for 1.12
- Extended bag slot support from 109 slots to 128 slots (16-slot main bag & 4x 28-slot bag)
- Modified OpenAllBags hook to allow Blizzard "Open All Bags" keybind to actually toggle, instead of just open bags (similar to default UI behaviour)
- Modified default settings: scale from 0.64 to 1 and columns from 9 to 10
- Modified categorization groups
- Modified categorization string search patterns
- Added over 300 items to specifically categorize (default override)


If you update from a previous version, make sure to delete the following two files first:

\WTF\Account\ACCOUNTNAME\SavedVariables\EngInventory.lua
\WTF\Account\ACCOUNTNAME\SavedVariables\EngInventory.lua.bak



* I'm not adding anything to this mod anymore - It works fine for me, and I much rather just play WoW *

I regret not making a "bank version" of this mod.  How the current code is done, it would be impossible to just hack it in, so it would mean a full rewrite.


Current serious bugs:
- PM me if you find something serious and I'll post it here.


They're not bugs, they're features:
- Swapping items marks them both as new.  This is because you actually are swapping the items in the bags, but they get resorted and appear not to move.  To the sort routine, the item wasn't in that container/slot before, so it's a new item.  I can't think of an elegant solution arround this.  Just don't move items on top of eachother if the "new" tag bugs you.  :)  A possible solution is to track if an item being dropped in a bag is coming from another bag slot, and swap the items in the mod's cache at the same time.  It seems like a lot of trouble for a minor "bug".
