@@ -48,6 +48,7 @@
 - Extended bag slot support from 109 slots to 128 slots (16-slot main bag & 4x 28-slot bag)
 - Modified OpenAllBags hook to allow Blizzard "Open All Bags" keybind to actually toggle, instead of just open bags (similar to default UI behaviour)
 - Modified default settings: scale from 0.64 to 1 and columns from 9 to 10
+- Modified default color settings: background and borders from blue to dark gray
 - Modified categorization groups
 - Modified categorization string search patterns
 - Added over 300 items to specifically categorize (default override)
